fix urls on index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cross-document view transitions</title>
+    <title>Cross-document View Transitions</title>
     <style>
       @layer reset {
         * {
@@ -132,7 +132,7 @@
   </head>
   <body>
     <main>
-      <h1>Cross-document view transitions</h1>
+      <h1>Cross-document View Transitions</h1>
       <p>
         A collection of demos to explore the
         <a
@@ -159,7 +159,7 @@
               set to 2 seconds to show the effect clearly.
             </li>
             <li>
-              <a href="/1-carousel/1.2-scale-transition/">Shrink animation</a>:
+              <a href="/1-carousel/1.2-shrink-animation/">Shrink animation</a>:
               The animation shrinks the source page out of view, and expands the
               target page into view.
             </li>
