Preload images in carousel demos

--- a/1-carousel/1.1-basic/index.html
+++ b/1-carousel/1.1-basic/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Carousel: Page 1</title>
+    <link
+      rel="preload"
+      href="/1-carousel/shared/img/cape-town.webp"
+      as="image"
+    />
     <link rel="stylesheet" href="/1-carousel/shared/styles.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -13,6 +18,8 @@
       src="/1-carousel/shared/img/cape-town.webp"
       alt="A closeup view of cape town, south africa. It shows a beach area with some houses against with the mountains in the background."
     />
-    <a href="page2.html" class="next"><img src="/1-carousel/shared/img/arrow-right.svg" /></a>
+    <a href="page2.html" class="next"
+      ><img src="/1-carousel/shared/img/arrow-right.svg"
+    /></a>
   </body>
 </html>
