--- a/1-carousel/1.1-basic/page3.html
+++ b/1-carousel/1.1-basic/page3.html
@@ -3,7 +3,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Carousel: Page 3</title>
-    <link rel="stylesheet" href="/1-carousel/shared/styles.css" /><link rel="stylesheet" href="styles.css" />
+    <link
+      rel="preload"
+      href="/1-carousel/shared/img/rio-de-janeiro.webp"
+      as="image"
+    />
+    <link rel="stylesheet" href="/1-carousel/shared/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -12,6 +18,8 @@
       src="/1-carousel/shared/img/rio-de-janeiro.webp"
       alt="A panoramic view of rio de janeiro,brazil."
     />
-    <a href="page2.html" class="previous"><img src="/1-carousel/shared/img/arrow-left.svg" /></a>
+    <a href="page2.html" class="previous"
+      ><img src="/1-carousel/shared/img/arrow-left.svg"
+    /></a>
   </body>
 </html>
