--- a/1-carousel/1.4-slide-horizontal-animation/page3.html
+++ b/1-carousel/1.4-slide-horizontal-animation/page3.html
@@ -3,6 +3,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Carousel: Page 3</title>
+    <link
+      rel="preload"
+      href="/1-carousel/shared/img/rio-de-janeiro.webp"
+      as="image"
+    />
     <link rel="stylesheet" href="/1-carousel/shared/styles.css" />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
